objects/Account_Child__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Childs</relationshipLabel>
        <relationshipName>Account_Childs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <externalId>true</externalId>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Childs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Child</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Application_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Child_Queue_Account_Child</fullName>
        <filterScope>Queue</filterScope>
        <label>Child Queue</label>
        <queue>Child_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Account Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Childs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>